--- a/css/style.css
+++ b/css/style.css
@@ -2,64 +2,92 @@ body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
 }
+
+/* Search Field  */
 .search-field {
   border: none;
   border-radius: 50px;
-  padding: 5px;
+  /* padding: 5px; */
   outline: none;
+  margin-bottom: 20px;
 }
 .search-field:hover {
   outline: none;
   border: none;
 }
 .search-box {
-  border: 1px solid rgb(3, 118, 211);
-  width: 281px;
+  display: flex;
+  justify-content: space-between;
+  border: 2px solid grey;
+  width: 40%;
   border-radius: 5px;
   margin: auto;
   margin-top: 50px;
-  border-right: none;
+}
+.search-box:hover{
+  border: 2px solid orange ;
 }
 .search-button {
   padding: 10px 50px;
   border-radius: 25px;
-  margin-left: 20px;
 }
+#input-field{
+  width: 100%;
+  border: none;
+}
+
+/* Product Field  */
 #all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   /* border: 1px solid black; */
-  text-align: center;
+  /* text-align: center; */
   width: 100%;
   margin: auto;
   align-items: center;
   justify-content: center;
+  grid-column-gap: 5px;
+  grid-row-gap: 5px;
+  padding-left: 30px;
 }
 .single-product {
   padding: 10px;
   transition: 0.6s;
+  /* background-color:rgb(188, 226, 226); */
+  background-color:rgb(226, 241, 241);
+  height: 450px;
+  border-radius: 5px;
 }
 .single-product:hover {
-  box-shadow: 4px 4px 7px gray;
+  box-shadow: 2px 2px 7px 6px rgb(184, 178, 178);
   border-radius: 10px;
-  border: 1px solid cyan;
+  border: 1px solid rgb(97, 91, 91);
 }
 .product-image {
   width: 150px;
   height: 150px;
 }
+#imgDiv{
+  display: flex;
+  justify-content: center;
+}
+
+/* Calculation Card  */
 .cart {
   width: 350px;
-  /* border: 1px solid green; */
   padding: 10px;
   box-shadow: 10px 10px 20px gray;
   border-radius: 5px;
   margin-right: 30px;
-  position: fixed;
+  /* position: absolute; */
+  background-color: rgb(14, 15, 14);
+  color:white;
 }
 .cart-main {
   padding-right: 30px;
 }
+
+/* Media query  */
 @media only screen and (max-width: 768px) {
   #all-products {
     display: grid;
@@ -72,7 +100,7 @@ body {
     box-shadow: 10px 10px 20px gray;
     border-radius: 5px;
     margin-right: 30px;
-    position: fixed;
+    /* position: fixed; */
   }
   .cart-main {
     padding-right: 10px;
@@ -83,4 +111,22 @@ body {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
   }
+}
+
+/* Other style  */
+
+#rating-div{
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+  margin-bottom: 10px;
+}
+.topMargin{
+  margin-top: 10px;
+}
+.bottonMargin{
+  margin-bottom: 10px;
+}
+.checked {
+  color: orange;
 }
