--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ body {
   box-shadow: 10px 10px 20px gray;
   border-radius: 5px;
   margin-right: 30px;
-  /* position: absolute; */
+  position: fixed;
   background-color: rgb(14, 15, 14);
   color:white;
 }
@@ -100,7 +100,7 @@ body {
     box-shadow: 10px 10px 20px gray;
     border-radius: 5px;
     margin-right: 30px;
-    /* position: fixed; */
+    position: fixed;
   }
   .cart-main {
     padding-right: 10px;
