--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ body {
     box-shadow: 10px 10px 20px gray;
     border-radius: 5px;
     margin-right: 30px;
-    position: fixed;
+    position: absolute;
   }
   .cart-main {
     padding-right: 10px;
